# workflows

./: .gitignore  AGENTS.md  README.md  ascend-test-landscape.pptx
.serena/: project.yml
ci-effective-report/: .gitignore  CONTEXT.md  ci_analyze.py  ci_duration_analysis.py  step-names.json  (+6 more)
repo-distiller/: .gitignore  .mise.toml  AGENTS.md  INTEGRATOR_REPORT.md  README.md  community-robots-report.md  handoff-mpVDP4.md  pyproject.toml
repo-distiller/.agents/: dfx.md  integrator.md  pm.md  security.md
repo-distiller/.pi/: models.json  settings.json
repo-distiller/.pi/agents/: integrator.md  pm.md  ux.md
repo-distiller/.sisyphus/plans/: repo-distiller-plan.md
repo-distiller/software-package-distill-output/: architect_output.md  context.json  dfx_output.md  final_report.md  pm_output.md  security_output.md  ux_output.md
repo-distiller/src/repo_distiller/: analyzer.py  ast_parser.py  call_graph_analyzer.py  cli.py  config_parser.py  dependency_parser.py  deploy_parser.py  git_analyzer.py  git_ops.py  iac_parser.py  infra_analyzer.py  orchestrator.py  repomix_bridge.py  schema_analyzer.py  state_machine_analyzer.py
repo-distiller/src/repo_distiller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repo-distiller/src/repo_distiller/agents/: architect.md
yt-obsidian/: README.md  pyproject.toml
yt-obsidian/src/yt_obsidian/: __init__.py  agents.py  cli.py  config.py  downloader.py  models.py  obsidian_writer.py  orchestrator.py  traceability.py  transcriber.py  youtube_search.py
yt-obsidian/src/yt_obsidian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
yt-obsidian/tests/: conftest.py  test_models.py  test_obsidian_writer.py  test_orchestrator.py  test_traceability.py  test_transcriber.py
(+15 files in other folders)
